# vlm-annotations

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_auto_sweep.sh
src/vlm_pipeline/: __init__.py  cli.py  config.py  episode_index.py  evaluate.py  frame_sampler.py  hf_dataset.py  parser.py  prompting.py  vllm_client.py  writers.py
src/vlm_pipeline/schemas/: annotation_v1.json
tests/: conftest.py  test_episode_index.py  test_evaluate.py  test_frame_sampler.py  test_integration_annotate.py  test_integration_inspect.py  test_integration_sweep.py  test_parser.py
